--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,4 +17,9 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
  
+ 	<listener>
+ 		<listener-class>
+ 			com.holodec.models.util.HibernateListener
+ 		</listener-class>
+ 	</listener>
 </web-app>
